tests/fixtures/errors/generic_in_concrete.z
# A concrete function signature cannot reference a type parameter.
probe: function {x: (List of: t)} out i64 is {
    return 1
}

main: function is {
    print "\{probe x: 1}"
}
